fixed Who We Are line spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -250,6 +250,7 @@ footer {
   background-color: #d8d8dc;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 30px;
 }
 
 #comments {
